v/go1.7/cmd/vet/tests/tests_test.go
package main

import "testing"

func TestbadSuffix(*testing.T) {} // ERROR "first letter after 'Test' must not be lowercase"
